--- a/conferences.html
+++ b/conferences.html
@@ -38,18 +38,28 @@ caratula: images/fronts/agumeet.png
 
 <h3><a name="posters"></a>Posters:</h3>
 <ul><li>
-    <p class="discreet"><strong>International Radiation Symposium 2022</strong>, 4-8 July 2022, Thessaloniki, Greece<br /><strong>Saavedra Garfias P., H. Kalesse-Los, K. Ebell</strong>: <em>Estimation of cloud radiative effects from ground-based observations in the Western Arctic. Wintertime radiative effects as function of cloud-moisture-coupling and sea ice conditions.</em> DOI: <a href="https://zenodo.org/badge/latestdoi/508826890"><img src="https://zenodo.org/badge/508826890.svg" alt="DOI"></a></p>
+    <p class="discreet"><strong>American Geophysical Union 2023</strong>, 12-16 July 2023, Chicago, USA<br /><strong>Saavedra Garfias P., H. Kalesse-Los, L. von Albedyll, H. Griesche, G. Spreen</strong>: <em>Cloud Macro-and Microphysical Properties as Coupled to Sea Ice Leads During the MOSAiC Expedition.</em> DOI: <a href="https://doi.org/10.22541/essoar.167397335.54837214/v1">10.22541/essoar.167397335.54837214</a></p>
 </li><li>
+    <p class="discreet"><strong>American Geophysical Union 2023</strong>, 12-16 July 2023, Chicago, USA<br /><strong>Saavedra Garfias P., H. Kalesse-Los, K. Ebell</strong>: <em>Climatology of mixed-phase clouds and their radiative effects when coupled to sea ice; study based from observations at the western Arctic.</em> DOI: <a href="https://doi.org/10.22541/essoar.167457993.38674219/v1">10.22541/essoar.167457993.38674219</a></p>
+</li><li>
+    <p class="discreet"><strong>International Radiation Symposium 2022</strong>, 4-8 July 2022, Thessaloniki, Greece<br /><strong>Saavedra Garfias P., H. Kalesse-Los, K. Ebell</strong>: <em>Estimation of cloud radiative effects from ground-based observations in the Western Arctic. Wintertime radiative effects as function of cloud-moisture-coupling and sea ice conditions.</em> DOI: <a href="https://zenodo.org/badge/latestdoi/508826890"><img src="https://zenodo.org/badge/508826890.svg" alt="DOI"></a></p>
+  </li>
+  <details><summary>2021</summary>
+  <li>
     <p class="discreet"><strong>American Geophysical Union 2021</strong>, 13-17 December 2021, New Orleans, USA<br /><strong>Saavedra Garfias P., H. Kalesse-Los, et alii</strong>: <em>Classification of cloud microphysical properties as a function of sea ice concentration conditions during MOSAiC.</em> (<a title="eLightning Poster" class="external-link" href="https://agu2021fallmeeting-agu.ipostersessions.com/Default.aspx?s=5F-9E-A0-68-9C-B2-E3-F9-90-87-E4-51-7B-4D-A2-3E">eLightning Link</a>), DOI: <a class="external-link", href="https://doi.org/10.1002/essoar.10509919.1">10.1002/essoar.10509919.1</a></p>
 </li><li>
 <p class="discreet"><strong>Arctic Amplification AC3 Science Conference 2021</strong>, 25-27 November 2021, Potsdam, Germany<br /><strong>Saavedra Garfias P., and H. Kalesse-Los</strong>: <em>Linking cloud properties and Cloudnet target classification to sea ice concentration conditions in the Western Arctic. (<a title="#PP06_Pablo_Garfias_AC3_B07.pdf" class="external-link" href="{{site.PDFmiub}}/posters/#PP06_Pablo_Garfias_AC3_B07.pdf">PDF</a>)</em></p>
-</li><li>
-<p class="discreet"><strong>American Geophysical Union AGU 2019</strong>, 9-13 December 2019, San Francisco, USA<br /><strong>Pejcic V., Saavedra Garfias P., Troemel S., Mühlbauer K., and C. Simmer</strong>: <em>Evaluation of Germany's network radar composite rain producs with GPM near surface precipitation estimations. (<a title="ESSOAr link" class="external-link" href="https://doi.org/10.1002/essoar.10501387.1">Pre-print</a>)</em></p>
-</li><li>
-<p class="discreet"><strong>American Geophysical Union AGU 2019</strong>, 9-13 December 2019, San Francisco, USA<br /><strong>Saavedra Garfias P., and J. Reuder</strong>: <em>Uncertainties characterization of tropospheric profile retrieval by Bayesian inversion as compared to state-of-the-art methods from ground-based microwave radiometry. (<a title="ESSOAr link" class="external-link" href="https://doi.org/10.1002/essoar.10501335.2">Pre-print</a>)</em></p>
-</li><details>
-	<summary> Click here too expand list:</summary>
-<li>
+  </li>
+  </details>
+  <details><summary>2019</summary>
+  <li> 
+    <p class="discreet"><strong>American Geophysical Union AGU 2019</strong>, 9-13 December 2019, San Francisco, USA<br /><strong>Pejcic V., Saavedra Garfias P., Troemel S., Mühlbauer K., and C. Simmer</strong>: <em>Evaluation of Germany's network radar composite rain producs with GPM near surface precipitation estimations. (<a title="ESSOAr link" class="external-link" href="https://doi.org/10.1002/essoar.10501387.1">Pre-print</a>)</em></p>
+    </li><li>
+      <p class="discreet"><strong>American Geophysical Union AGU 2019</strong>, 9-13 December 2019, San Francisco, USA<br /><strong>Saavedra Garfias P., and J. Reuder</strong>: <em>Uncertainties characterization of tropospheric profile retrieval by Bayesian inversion as compared to state-of-the-art methods from ground-based microwave radiometry. (<a title="ESSOAr link" class="external-link" href="https://doi.org/10.1002/essoar.10501335.2">Pre-print</a>)</em></p>
+  </li>
+  </details>
+  <details><summary>2018…2017</summary>
+    <li>
 <p class="discreet"><strong>European Geosciences Union EGU 2017</strong>, 23-28 April 2017, Vienna, Austria<br /><strong>Saavedra P., and C. Simmer</strong>: <em>Satellite Brightness Temperatures simulator for high-resolution virtual catchment. (<a title="poster_egu.pdf" class="internal-link" href="{{site.PDFmiub}}/posters/poster_egu.pdf">PDF</a>)</em></p>
 </li><li>
 <p class="discreet"><strong>IRS 2016</strong>, 16-22 April 2016, Auckland, New Zealand<br /><strong>Saavedra P.</strong>: <em>Anomalous Increasing Effect on UV Radiation by Cloudiness at a High Altitude Observatory.(<a title="PSaavedra_irs2016.pdf" class="internal-link" href="{{site.PDFmiub}}/posters/PSaavedra_irs2016.pdf">PDF</a>)</em></p>
