--- a/publications.html
+++ b/publications.html
@@ -7,43 +7,52 @@ title: List of Publications
 
 <h3 name="peer-reviewed-articles">Peer Reviewed:</h3>
 <ul><li>
-    <p class="discreet"><strong>Willi Schimmel, Heike Kalesse-Los, Maximilian Maahn, Teresa Vogl, Andreas Foth, <u>Pablo Saavedra Garfias</u>, and Patric Seifert</strong>:
+    <p class="discreet"><strong><u>Saavedra Garfias, P.</u>, H. Kalesse-Los, L. von Albedyll, H. Griesche, and G. Spreen</strong>: <em>Asymmetries in winter cloud microphysical properties ascribed to sea ice leads in the central Arctic</em>, Atmos. Chem. Phys. Discuss. <em>Submitted</em>, 2023.
+    </p>
+    </li><li>
+    <p class="discreet"><strong>Linke, O., Quaas, J., Baumer, F., Becker, S., Chylik, J., Dahlke, S., Ehrlich, A., Handorf, D., Jacobi, C., Kalesse-Los, H., Lelli, L., Mehrdad, S., Neggers, R. A. J., Riebold, J., <u>Saavedra Garfias, P.</u>, Schnierstein, N., Shupe, M. D., Smith, C., Spreen, G., Verneuil, B., Vinjamuri, K. S., Vountas, M., and Wendisch, M.</strong>: <em>Constraints on simulated past Arctic amplification and lapse-rate feedback from observations</em>, Atmos. Chem. Phys. Discuss. <a href="https://doi.org/10.5194/acp-2022-836" target="_blank">[preprint]:10.5194/acp-2022-836 , in review</a>, 2023.
+    </p>
+  </li><li>
+    <p class="discreet"><strong>Xie X., Xiao, X., He, J., <u>Saavedra Garfias, P.</u>, Li, T., Gu, S., Guo, Y.</strong>: <em>In situ observations of rain rate and precipitation microphysics over the coastal area of South China: Perspectives for satellite validation</em>, AMS Journal of Hydrometeorology, <em>Submitted</em>, 2022.
+    </p>
+    </li><li>
+    <p class="discreet"><strong>Schimmel, W., Kalesse-Los, H., Maahn, M., Vogl, T., Foth, A., <u>Saavedra Garfias, P.</u>, and Seifert, P.</strong>:
         <em>Identifying cloud droplets beyond lidar attenuation from vertically-pointing cloud radar observations using artificial neural networks</em>,
-        Submitted to Atmospheric Measurement Techniques, (Discussion) <a href="https://amt.copernicus.org/preprints/amt-2022-149/">amt-2022-149</a>, 2022.
+        Atmospheric Measurement Techniques, 15, doi:<a href="https://doi.org/10.5194/amt-15-5343-2022" target="_blank">10.5194/amt-15-5343-2022</a>, 2022.
     </p>
   </li><li>
     <p class="discreet"><strong>Schalge, B., Baroni, G., Haese, B., Erdal, D., Geppert, G., <u>Saavedra, P.</u>, Haefliger, V., Vereecken, H., Attinger, S., Kunstmann, H., Cirpka, O. A., Ament, F., Kollet, S., Neuweiler, I., Hendricks Franssen, H.-J., and Simmer, C.</strong>:
       <em>Presentation and discussion of the high-resolution atmosphere–land-surface–subsurface simulation dataset of the simulated Neckar catchment for the period 2007–2015</em>,
-      Earth Syst. Sci. Data, doi:<a href="https://doi.org/10.5194/essd-13-4437-2021">10.5194/essd-13-4437-2021</a>, 2021.
+      Earth Syst. Sci. Data, doi:<a href="https://doi.org/10.5194/essd-13-4437-2021" target="_blank">10.5194/essd-13-4437-2021</a>, 2021.
     </p>
   </li><li>
     <p class="discreet">
-      <strong>Cheynet, E., Flügge, M., Reuder, J., Jakobsen, J. B., Heggelund, Y., Svardal, B., <u>Saavedra Garfias, P.</u>, Obhrai, C., Daniotti, N., Berge, J., Duscha, C., Wildmann, N., Onarheim, I. H., and Godvik, M.</strong>: <em>The COTUR project: remote sensing of offshore turbulence for wind energy application</em>, Atmos. Meas. Tech., 14, 6137–6157, doi:<a href="https://doi.org/10.5194/amt-14-6137-2021">10.5194/amt-14-6137-2021</a>, 2021.
+      <strong>Cheynet, E., Flügge, M., Reuder, J., Jakobsen, J. B., Heggelund, Y., Svardal, B., <u>Saavedra Garfias, P.</u>, Obhrai, C., Daniotti, N., Berge, J., Duscha, C., Wildmann, N., Onarheim, I. H., and Godvik, M.</strong>: <em>The COTUR project: remote sensing of offshore turbulence for wind energy application</em>, Atmos. Meas. Tech., 14, 6137–6157, doi:<a href="https://doi.org/10.5194/amt-14-6137-2021" target="_blank">10.5194/amt-14-6137-2021</a>, 2021.
     </p>
   </li><li>
     <p class="discreet"><strong>Pejcic V., <u>Saavedra Garfias P.</u>, Mühlbauer K., Trömel S., and C. Simmer</strong>:
       <em>Comparison between precipitation estimates of ground-based weather radar composites and GPM’s DPR rainfall product over Germany</em>,
-      Meteorologische Zeitschrift (METZ), <em>07, 2020. </em><a href="http://dx.doi.org/10.1127/metz/2020/1039">doi:10.1127/metz/2020/1039</a>
+      Meteorologische Zeitschrift (METZ), <em>07, 2020. </em><a href="http://dx.doi.org/10.1127/metz/2020/1039" target="_blank">doi:10.1127/metz/2020/1039</a>
     </p>
 </li><li>
     <p class="discreet"><strong>Lv Sh., Schalge B., <u>Saavedra Garfias P.</u>, and C. Simmer</strong>:
       <em>Required sampling-density of ground-based soil moisture and brightness temperature observations for calibration/validation of L-band satellite observations based on a virtual reality</em>,
-      Journal Hydrology and Earth System Sciences (HESS), <a href="https://www.hydrol-earth-syst-sci.net/24/1957/2020/">doi.org/10.5194/hess-24-1957-2020</a>
+      Journal Hydrology and Earth System Sciences (HESS), <a href="https://www.hydrol-earth-syst-sci.net/24/1957/2020/" target="_blank">doi.org/10.5194/hess-24-1957-2020</a>
     </p>
   </li><li>
     <p class="discreet"><strong>Schalge, Bernd; Baroni, Gabriele; Haese, Barbara; Erdal, Daniel; Geppert, Gernot; <u>Saavedra, Pablo</u>; Haefliger, Vincent; Vereecken, Harry; Attinger, Sabine; Kunstmann, Harald; Cirpka, Olaf A.; Ament, Felix; Kollet, Stefan; Neuweiler, Insa; Hendricks Franssen, Harrie-Jan; Simmer, Clemens (2020)</strong>.
       <em>Virtual catchment simulation based on the Neckar region. World Data Center for Climate (WDCC) at DKRZ</em>.
-      doi:<a href="https://doi.org/10.26050/WDCC/Neckar_VCS_v1">10.26050/WDCC/Neckar_VCS_v1</a>
+      doi:<a href="https://doi.org/10.26050/WDCC/Neckar_VCS_v1" target="_blank">10.26050/WDCC/Neckar_VCS_v1</a>
     </p>
 </li><li>
     <p class="discreet"><strong><u>Saavedra P.</u>, and C. Simmer </strong>:
       <em>An Octave/MATLAB Interface For Rapid Processing SMOS L1C Full Polarization Brightness Temperature</em>,
-      Journal of Open Research Software <a title="JORS on-line database" href="https://openresearchsoftware.metajnl.com">(JORS)</a>, 6(1) p.2., 2018, doi:<a href="http://doi.org/10.5334/jors.165">doi.org/10.5334/jors.165</a>
+      Journal of Open Research Software <a title="JORS on-line database" href="https://openresearchsoftware.metajnl.com">(JORS)</a>, 6(1) p.2., 2018, doi:<a href="http://doi.org/10.5334/jors.165" target="_blank">doi.org/10.5334/jors.165</a>
     </p>
 </li><li>
 <p class="discreet"><strong>Xie X., Evaristo R., Troemel S., <u>Saavedra P.</u> and C. Simmer</strong>: <em>Radar observation of evaporation and implications for rainfall precipitation and cooling rate estimation</em>, J. Atmos. Ocea. Tech., 2016, doi:10.1175/JTECH-D-15-0244.1.</p>
 </li><li>
-<p class="discreet"><strong><u>Saavedra P.</u>, and A. Battaglia </strong>: <em>GPM Ground Validation Advanced Microwave Radiometer Rain Identification (ADMIRARI) GCPEx</em>, Dataset from the NASA EOSDIS Global Hydrology Resource Center Distributed Active Archive Center Huntsville, Alabama, U.S.A., <a title="GCPEx on-line database" href="http://dx.doi.org/10.5067/GPMGV/GCPEX/ADMIRARI/DATA201">on-line</a>, 2012, doi: 10.5067/GPMGV/GCPEX/ADMIRARI/DATA201.</p>
+<p class="discreet"><strong><u>Saavedra P.</u>, and A. Battaglia </strong>: <em>GPM Ground Validation Advanced Microwave Radiometer Rain Identification (ADMIRARI) GCPEx</em>, Dataset from the NASA EOSDIS Global Hydrology Resource Center Distributed Active Archive Center Huntsville, Alabama, U.S.A., <a title="GCPEx on-line database" href="http://dx.doi.org/10.5067/GPMGV/GCPEX/ADMIRARI/DATA201" target="_blank">on-line</a>, 2012, doi: 10.5067/GPMGV/GCPEX/ADMIRARI/DATA201.</p>
 </li><li>
 <p class="discreet"><strong><u>Saavedra P.</u>, Battaglia A. and C. Simmer</strong>: <em>Partitioning of cloud water and rain water content by ground-based observations with the Advanced Microwave Radiometer for Rain Identification (ADMIRARI) in synergy with a micro rain radar</em>, JGR, Atmosphere, 2011, 117,D05203,doi:10.1029/2011JD016382.</p>
 </li><li>
@@ -58,34 +67,41 @@ title: List of Publications
 <p class="discreet"><strong>Ghezzi, F., <u>P. Saavedra</u>, E. Palenque and F. Zaratti</strong>: <em>Analysis of correlation between Solar activity and columnar Ozone at tropical latitudes</em>, Revista Boliviana de Física, No 8, pp. 16-22, 2002, ISSN 1562-3823. (in spanish)(<a title="sobofi_n8" class="internal-link" href="{{site.PDFmiub}}/papers/sobofi_n8">PDF</a>), (<a class="external-link" href="http://www.fiumsa.edu.bo/sobofi/archivos/numero8.pdf">HTML</a>).</p>
 </li></ul> -->
 <dl><dt>
-<h3>Proceedings:</h3>
+    <h3>Proceedings:</h3>
+    <ul><li>
+    <p class="discreet">
+      <strong><u>Saavedra Garfias, P.</u>, H. Kalesse-Los, K. Ebell </strong>:
+      <em>Estimation of Wintertime Cloud Radiative Effects in the Western Arctic, a Function of Cloud-Moisture-Coupl
+ing and Sea Ice Conditions</em>, American Institute of Physics (AIP) Proceedings, <a class="external-link" href="https://aip.scitation.org/apc/info/forthcoming" target="_blank">International Radiation Symposium</a>, <em>Submitted</em>, 2022.
+    </p>
+    </li></ul>
 <ul><li>
     <p class="discreet">
       <strong><u>Saavedra Garfias, P.</u>, Bhandari A., Reuder J., Imaki M., Kotake N. and Kameyama Sh.</strong>:
       <em>Comparison and investigation on the lidar-measured turbulence intensities in the measurement campaign using two independent lidars.
-      </em>, Vol. 41, p. 261-264, 2019. 41th Wind Energy Symposium, Tokyo, Japan. Japan Wind Energy Association. (DOI: <a class="external-link" href="https://doi.org/10.11333/jweasympo.41.0_261">doi.org/10.11333/jweasympo.41.0_261</a>)
+      </em>, Vol. 41, p. 261-264, 2019. 41th Wind Energy Symposium, Tokyo, Japan. Japan Wind Energy Association. (DOI: <a class="external-link" href="https://doi.org/10.11333/jweasympo.41.0_261" target="_blank">doi.org/10.11333/jweasympo.41.0_261</a>)
     </p>
 </li></ul>
 <ul><li>
-<p class="discreet"><strong><u>Saavedra P.</u>, Simmer C. and B. Schalge</strong>: <em>Evaluation of Modeled high Resolution Virtual Brightness Temperatures Compared to Space-borne Observations for the Neckar Catchment. </em>2016, 14th Specialist Meeting on Microwave Radiometry and Remote Sensing of the Environment (MICRORAD), Espoo,pp. 85-90, doi: 10.1109/MICRORAD.2016.7530510. (<a class="external-link" href="http://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&amp;arnumber=7530510&amp;isnumber=7530484">PDF</a>)</p>
+<p class="discreet"><strong><u>Saavedra P.</u>, Simmer C. and B. Schalge</strong>: <em>Evaluation of Modeled high Resolution Virtual Brightness Temperatures Compared to Space-borne Observations for the Neckar Catchment. </em>2016, 14th Specialist Meeting on Microwave Radiometry and Remote Sensing of the Environment (MICRORAD), Espoo,pp. 85-90, doi: 10.1109/MICRORAD.2016.7530510. (<a class="external-link" href="http://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&amp;arnumber=7530510&amp;isnumber=7530484" target="_blank">PDF</a>)</p>
 </li></ul>
 <ul><li>
-<p class="discreet"><strong><u>Saavedra P.</u>, Battaglia A., Ryzhkov A. and C. Simmer</strong>: <em>Melting Layer Attenuation as Observed by Polarimetric Radar-Radiometer Synergistic Approach. </em>8th  European Conference on Radar Meteorology and Hydrology (ERAD2014), Conf. Proc. (<a class="external-link" href="http://www.pa.op.dlr.de/erad2014/programme/ExtendedAbstracts/374_Saavedra.pdf">PDF</a>)</p>
+<p class="discreet"><strong><u>Saavedra P.</u>, Battaglia A., Ryzhkov A. and C. Simmer</strong>: <em>Melting Layer Attenuation as Observed by Polarimetric Radar-Radiometer Synergistic Approach. </em>8th  European Conference on Radar Meteorology and Hydrology (ERAD2014), Conf. Proc. (<a class="external-link" href="http://www.pa.op.dlr.de/erad2014/programme/ExtendedAbstracts/374_Saavedra.pdf" target="_blank">PDF</a>)</p>
 </li></ul>
 <ul><li>
-<p class="discreet"><strong><u>Saavedra P.</u>, Battaglia A., Ryzhkov A. and C. Simmer</strong>: <em>Synergy between polarimetric radar and radiometer ADMIRARI for estimation of precipitating parameters. </em>36th Conference of Radar Meteorology, American Meteorological Society (AMS), Conf. Proc. (<a class="external-link" href="https://ams.confex.com/ams/36Radar/webprogram/Paper229168.html">PDF</a>)</p>
+<p class="discreet"><strong><u>Saavedra P.</u>, Battaglia A., Ryzhkov A. and C. Simmer</strong>: <em>Synergy between polarimetric radar and radiometer ADMIRARI for estimation of precipitating parameters. </em>36th Conference of Radar Meteorology, American Meteorological Society (AMS), Conf. Proc. (<a class="external-link" href="https://ams.confex.com/ams/36Radar/webprogram/Paper229168.html" target="_blank">PDF</a>)</p>
 </li></ul>
 <ul><li>
-<p class="discreet"><strong><u>Saavedra P.</u>, Battaglia A., Simmer C., Vega M. and V. Chandrasekar</strong>: <em>On the feasibility to combine observations from multi-wavelength radar and the multi-frequency radiometer ADMIRARI to retrieve precipitating clouds parameters. </em>American Institute of Physics (AIP), Conf. Proc. 1531 pp. 260-263;doi:http://dx.doi.org/10.1063/1.4804756. (<a class="external-link" href="http://proceedings.aip.org/resource/2/apcpcs/1531/1/260_1">PDF</a>)</p>
+<p class="discreet"><strong><u>Saavedra P.</u>, Battaglia A., Simmer C., Vega M. and V. Chandrasekar</strong>: <em>On the feasibility to combine observations from multi-wavelength radar and the multi-frequency radiometer ADMIRARI to retrieve precipitating clouds parameters. </em>American Institute of Physics (AIP), Conf. Proc. 1531 pp. 260-263;doi:http://dx.doi.org/10.1063/1.4804756. (<a class="external-link" href="http://proceedings.aip.org/resource/2/apcpcs/1531/1/260_1" target="_blank">PDF</a>)</p>
 </li></ul>
 <ul><li>
-<p class="discreet"><strong><u>Saavedra P.</u>, Battaglia A. and C. Simmer</strong>: <em>The contribution of the microwave radiometer ADMIRARI to the NASA GPM ground validation field experiments. </em>American Institute of Physics (AIP), Conf. Proc. 1531 pp. 592-595; doi:http://dx.doi.org/10.1063/1.4804839. (<a class="external-link" href="http://proceedings.aip.org/resource/2/apcpcs/1531/1/592_1">PDF</a>)</p>
+<p class="discreet"><strong><u>Saavedra P.</u>, Battaglia A. and C. Simmer</strong>: <em>The contribution of the microwave radiometer ADMIRARI to the NASA GPM ground validation field experiments. </em>American Institute of Physics (AIP), Conf. Proc. 1531 pp. 592-595; doi:http://dx.doi.org/10.1063/1.4804839. (<a class="external-link" href="http://proceedings.aip.org/resource/2/apcpcs/1531/1/592_1" target="_blank">PDF</a>)</p>
 </li></ul>
 <ul><li>
-<p class="discreet"><strong>Lautaporti S., Moisseev D., <u>Saavedra P.</u>, Battaglia A. and V. Chandrasekar</strong>: <em>Dual polarization radar and microwave radiometer observations of winter precipitation during LPVEx, </em>at the European Radar Conference 2012, Toulouse-France. (<a title="MIC_201_ext_abs.pdf" class="internal-link" href="{{site.PDFmiub}}/procee/MIC_201_ext_abs.pdf">PDF</a>)</p>
+<p class="discreet"><strong>Lautaporti S., Moisseev D., <u>Saavedra P.</u>, Battaglia A. and V. Chandrasekar</strong>: <em>Dual polarization radar and microwave radiometer observations of winter precipitation during LPVEx, </em>at the European Radar Conference 2012, Toulouse-France. (<a title="MIC_201_ext_abs.pdf" class="internal-link" href="{{site.PDFmiub}}/procee/MIC_201_ext_abs.pdf" target="_blank">PDF</a>)</p>
 </li></ul>
 <ul><li>
-<p class="discreet"><strong><u>Saavedra P.</u>, Battaglia A. and C. Simmer</strong>: <em>Partitioning of cloud and rain water content by ground-based observations with a multi-frequency microwave radiometer in synergy with a micro rain radar, </em>at the 8th International Symposium &nbsp;on Tropospheric Profiling 2009, Delft-The Netherlands. (<a class="external-link" href="http://cerberus.rivm.nl/ISTP/data/1660768.pdf">PDF</a>)</p>
+<p class="discreet"><strong><u>Saavedra P.</u>, Battaglia A. and C. Simmer</strong>: <em>Partitioning of cloud and rain water content by ground-based observations with a multi-frequency microwave radiometer in synergy with a micro rain radar, </em>at the 8th International Symposium &nbsp;on Tropospheric Profiling 2009, Delft-The Netherlands. (<a class="external-link" href="http://cerberus.rivm.nl/ISTP/data/1660768.pdf" target="_blank">PDF</a>)</p>
 </li></ul>
 <h3 name="theses">Theses:</h3>
 <ul>
